# RepoViz

./: .gitignore  CNAME  INTEGRATION_SUMMARY.md  INTEGRITY_STUDIO_IMPLEMENTATION_SUMMARY.md  LEORA_IMPLEMENTATION_SUMMARY.md  LEORA_SCHEMA_DOCUMENTATION.md  LUIS_LANDSCAPING_IMPLEMENTATION_SUMMARY.md  QUICKSTART.md  README.md  README_ENHANCED.md  README_INTEGRITY_STUDIO.md  README_LEORA.md  README_LUIS_LANDSCAPING.md  SCHEMA_ORG_IMPLEMENTATIONS_COMPARISON.md  TESTING.md  activate.sh  analyze_integrity_studio.py  commit_counts_month.txt  database_schema.py  enhanced_mcp_server.py  enhanced_plot_scripts.py  extract_schema_org.py  get_repo_name.sh  install.sh  integrity_studio_data_loader.py  integrity_studio_graph.json  integrity_studio_org.json  integrity_studio_schema_types.py  leora_complete.json  leora_data_loader.py  leora_schema_types.py  logs.txt  luis_landscaping_business.json  luis_landscaping_data_loader.py  luis_landscaping_graph.json  luis_landscaping_schema_types.py  pyproject.toml  pytest.ini  requirements-test.txt  requirements.txt  (+5 more)
.github/workflows/: deploy.yml
Generated Data/: commit_counts_day.txt  commit_counts_hour.txt  git_viz.db  index.html  integrity_studio_active_dirs.json
Generated Data/schemas/: aledlie_commits_by_day_schema.jsonld  aledlie_commits_by_hour_schema.jsonld  aledlie_commits_by_month_schema.jsonld  aledlie_commits_day_month_combined_schema.jsonld  commit_chart_schema.jsonld  integrity_studio_day_commits_schema.jsonld  integrity_studio_hour_commits_schema.jsonld  integrity_studio_month_commits_schema.jsonld
examples/: README.md  example_configs.py
git_commit_visualization_utilities.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
reports/: www-austininspiredmovement-com-schema-analysis-2025-10-15T22-25-22.html  www-austininspiredmovement-com-schema-analysis-2025-10-15T22-25-22.json
tests/: README.md  __init__.py  conftest.py  test_database_schema.py  test_enhanced_plot_scripts.py  test_installation.py  test_schemas.py
